--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,8 @@ body {
   border: #333 solid 1px;
   margin: 0 auto;
   border-radius: 3px;
+  width: 50rem;
+  box-shadow: 10px 10px 10px gray;
 }
 
 
