--- a/src/styles.css
+++ b/src/styles.css
@@ -4,22 +4,20 @@ body {
   margin: 0;
   height: 100vh;
 }
-.record-container, .align-center-container{
+.record-container,
+.align-center-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  
+  height: 80vh;
 }
-.record-container form{
+.record-container form {
   padding: 1rem;
   border: #333 solid 1px;
   margin: 0 auto;
   border-radius: 3px;
-  width: 50rem;
-  box-shadow: 10px 10px 10px gray;
+  width: 40rem;
 }
-
 
 .login-container {
   background-color: #fff;
@@ -38,7 +36,6 @@ body {
   margin-top: 20px;
 }
 
-
 label {
   display: block;
   margin-bottom: 8px;
@@ -47,7 +44,7 @@ label {
   margin-bottom: 10px;
 }
 
-.auth-input{
+.auth-input {
   width: 100%;
   padding: 10px;
   box-sizing: border-box;
@@ -57,7 +54,7 @@ label {
   margin-bottom: 20px;
 }
 
- .login-btn {
+.login-btn {
   background-color: #4caf50;
   color: #fff;
   padding: 10px 20px;
@@ -72,7 +69,7 @@ label {
   background-color: #45a049;
 }
 
-.incorrect-input{
+.incorrect-input {
   color: rgb(162, 19, 19);
   margin: 0;
 }
