--- a/src/index.css
+++ b/src/index.css
@@ -36,4 +36,70 @@
     @apply py-2;
     @apply text-center;
   }
+
+  .data-cell,
+  .action-cell,
+  .data-cell-center {
+    @apply p-6;
+    @apply w-60;
+  }
+
+  .data-cell,
+  .data-cell-center {
+    @apply text-nowrap;
+  }
+
+  .action-cell {
+    @apply flex;
+    @apply align-baseline;
+    @apply border;
+    @apply border-slate-300;
+    @apply py-3;
+  }
+
+  .table-format {
+    @apply table-auto;
+    @apply mx-auto;
+    @apply border-cyan-600;
+    @apply border;
+    @apply border-collapse;
+  }
+
+  .open-add-form-btn {
+    @apply float-right;
+    @apply text-white;
+    @apply rounded-sm;
+    @apply text-center;
+    @apply bg-pastelpurple;
+    @apply hover:bg-violet-800;
+
+    @apply mb-4;
+    @apply mt-0;
+    @apply px-4;
+    @apply py-2;
+  }
+
+  .page-container {
+    @apply p-8;
+    @apply bg-slate-100;
+  }
+  .page-header-container {
+    @apply container;
+    @apply mx-auto;
+    padding: auto;
+  }
+  .database-title {
+    @apply float-left;
+    @apply text-pastelpurple;
+  }
+
+  .table-header,
+  .table-header-center {
+    border-bottom: 1px solid black;
+    color: white;
+    padding: 1rem;
+    min-height: 3.5rem;
+    background-color: rgb(101, 101, 225);
+    cursor: default;
+  }
 }
